# Web-Crawler

./: .gitignore  CMakeLists.txt  README.md
include/: crawler.h  html_parser.h  http_client.h  server.h
src/: crawler.cpp  html_parser.cpp  http_client.cpp  main.cpp  server.cpp
static/: script.js  style.css
templates/: index.html
